[package]
name = "prettify"
version = "0.2.0"
authors = ["Joshua Leger <legermjoshua@gmail.com>"]
description = "Pretty prints or minifies data such as JSON, Base64, and XML."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI parsing
clap = "2.33.3"

# JSON Converter
serde = "1.0.130"
serde_json = "1.0.69"
colored_json = "2.1.0"

# Base64 Converter
base64 = "0.13.0"
